swagger def update with query params
